--- a/src/yandex/style/blocks/datetime/datetime.sass
+++ b/src/yandex/style/blocks/datetime/datetime.sass
@@ -1,7 +1,8 @@
 @import "../../common/common"
 
 .datetime
-  @include text-info
+  @include yandex-text-info
+  @include text-set-color($color-info-text)
 
   .datetime__item
     vertical-align: middle
