--- a/src/yandex/style/blocks/mail/mail.sass
+++ b/src/yandex/style/blocks/mail/mail.sass
@@ -9,7 +9,7 @@
     align-items: center
     margin-bottom: .6em
 
-    @include text-main()
+    @include yandex-text-normal()
 
     &._mail-line
       justify-content: space-between
