--- a/src/yandex/style/blocks/page-footer/page-footer.sass
+++ b/src/yandex/style/blocks/page-footer/page-footer.sass
@@ -1,7 +1,7 @@
 @import "../../common/common"
 
 .page-footer
-  @include text-main()
+  @include yandex-text-normal()
   display: flex
   flex-direction: row
   justify-content: space-between
