--- a/src/yandex/style/blocks/values-list/values-list.sass
+++ b/src/yandex/style/blocks/values-list/values-list.sass
@@ -6,7 +6,7 @@
   &__item
     display: inline-block
     margin-right: 0.8em
-    @include text-main($color-base-text)
+    @include yandex-text-normal($color-base-text)
 
   &__name
     @include text-set-color($color-base-text)
@@ -15,7 +15,9 @@
     text-transform: uppercase
 
   &__value
+    @include text-set-color($color-base-text)
     margin-right: 0.3em
 
   &__diff
-    @include text-info
+    @include yandex-text-info
+    @include text-set-color($color-info-text)
