--- a/src/yandex/style/common/common.sass
+++ b/src/yandex/style/common/common.sass
@@ -1,6 +1,9 @@
 @import "reset"
-@import "font-import"
 @import "font"
+
+@include font-import("../fonts/YS_text/YandexSansText", "swap")
+@include font-import("../fonts/YS_text/YandexSansDisplay", "swap")
+
 @import "colors"
 @import "sizes"
 @import "mixin"
