--- a/src/yandex/style/blocks/info-content/info-content.sass
+++ b/src/yandex/style/blocks/info-content/info-content.sass
@@ -4,9 +4,10 @@
   justify-content: center
 
   margin: 0 auto
+  padding-left: .5em
 
   &__left
-    flex: 1 0 67%
+    flex: 1 0 66%
 
   &__right
     flex: 1 0 30%
