--- a/src/yandex/style/blocks/news-list/news-list.sass
+++ b/src/yandex/style/blocks/news-list/news-list.sass
@@ -1,11 +1,12 @@
 @import "../../common/common"
 
 .news-list
-  font-size: $news-list-font-size
+  @include yandex-text-normal($news-list-font-size)
 
   &__item
-    @include text-main()
     display: flex
     align-items: baseline
     max-width: 95%
-    margin-bottom: 0.55em
+    margin-bottom: 0.5em
+    @include text-set-color($color-base-text)
+    line-height: 1.1em
