--- a/src/yandex/style/blocks/search-bar/search-bar.sass
+++ b/src/yandex/style/blocks/search-bar/search-bar.sass
@@ -3,13 +3,14 @@
 .search-bar
   position: relative
 
-  font-size: $search-bar-font-size
+  @include yandex-text-normal($search-bar-font-size)
+
+  padding: 0 .3em
 
   &__logo
     position: absolute
     right: calc(100% + .03em)
     top: -0.4em
     fill: white
-    font-size: $search-bar-logo-font-size
-
+    @include yandex-text-normal($search-bar-logo-font-size)
 
