--- a/src/yandex/style/blocks/zen-categories/zen-categories.sass
+++ b/src/yandex/style/blocks/zen-categories/zen-categories.sass
@@ -5,11 +5,11 @@
   padding-left: 5%
   padding-right: 5%
 
-  @include text-main($color-base-text)
+  @include yandex-text-normal($color-base-text)
 
   &__header
 
-    @include text-main-bold($color-base-text)
+    @include yandex-text-main-bold($color-base-text)
     display: flex
     align-items: center
     font-size: 1.2em
