--- a/src/yandex/style/blocks/top-bar/top-bar.sass
+++ b/src/yandex/style/blocks/top-bar/top-bar.sass
@@ -3,6 +3,6 @@
 .top-bar
   margin-top: .3em
   margin-right: 17.5em
-  padding: 0.4em 0.5em 0 1.3em
+  padding: 0.4em 0 0 1.3em
   font-size: $top-bar-font-size
   line-height: $top-bar-line-height
