--- a/src/mail/style/blocks/body/body.sass
+++ b/src/mail/style/blocks/body/body.sass
@@ -9,7 +9,8 @@
   &__left
     width: 20%
     flex: 1 0 21%
+    margin-right: 2%
 
   &__right
     width: 80%
-    flex: 1 0 80%
+    flex: 1 0 77.5%
