--- a/src/mail/style/blocks/category-list/category-list.sass
+++ b/src/mail/style/blocks/category-list/category-list.sass
@@ -9,12 +9,19 @@
 
   &._search-nav
     @extend ._smaller
-    margin-left: 1%
     justify-content: space-between
 
 
     .category-list__item
       margin-right: 2%
+
+  &._news
+    @extend ._search-nav
+    padding-top: .5em
+    padding-bottom: .5em
+    margin-bottom: .5em
+
+    border-bottom: 1px solid #f0f1f3
 
   &__item
     @include text-set-color($color-menu-inactive)
