--- a/src/mail/style/blocks/link/link.sass
+++ b/src/mail/style/blocks/link/link.sass
@@ -52,6 +52,10 @@
   &._flex
     display: flex
 
+
+  &._space-right
+    margin-right: .8em
+
   &__content
     display: flex
     transition: 0.3s all ease
