--- a/src/mail/style/blocks/link/link.sass
+++ b/src/mail/style/blocks/link/link.sass
@@ -52,6 +52,9 @@
   &._flex
     display: flex
 
+  &._news
+    font-size: 2.25em
+
 
   &._space-right
     margin-right: .8em
@@ -244,3 +247,6 @@
 
     &._flex
       display: flex
+
+    &._cam
+      font-size: .6em
