--- a/src/mail/style/blocks/search/search.sass
+++ b/src/mail/style/blocks/search/search.sass
@@ -26,12 +26,15 @@
     border-radius: .3em 0 0 .3em
     position: relative
     color: black
-    padding-left: 0.8em
+    padding-left: 2em
     padding-right: 6em
     font-size: $search-input-font-size
 
     &:focus
       outline: none
+
+      & + *
+        display: none !important
 
   &__icons
     position: absolute
@@ -43,6 +46,8 @@
     left: 1%
     top: 50%
     transform: translate(0, -50%)
+
+    font-size: .75em
 
   &__line-text
     position: absolute
