HTML-CSS-learning-3 / dev / mail     - Полность. сделанный mail

--- a/src/yandex/style/common/font.sass
+++ b/src/yandex/style/common/font.sass
@@ -39,6 +39,9 @@ $yandex-category-smaller-font-size: .8em
 
 $mail-base-font-family: Helvetica, Arial, sasn-serif
 
+$triks-main-forn: Blanco, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol
+$triks-secondary-font: Blanco, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol
+
 @mixin font-import-family($name, $path, $display: 'swap')
 
   @font-face
