--- a/src/css-tricks/style/blocks/header.sass
+++ b/src/css-tricks/style/blocks/header.sass
@@ -7,3 +7,11 @@
   border-bottom: .1em solid white
 
   background-color: #111
+
+  @media (max-width: 32em)
+    flex-wrap: wrap
+
+    justify-content: center
+
+    padding-left: .5em
+    padding-right: .5em
