HTML-CSS-learning-3 / dev / mail     - Полность. сделанный mail

--- a/src/css-tricks/style/main.sass
+++ b/src/css-tricks/style/main.sass
@@ -29,3 +29,7 @@ body
 @import "blocks/body"
 @import "blocks/article"
 @import "blocks/cards"
+@import "blocks/card"
+@import "blocks/tags"
+@import "blocks/articles"
+@import "blocks/advert"
