--- a/src/css-tricks/style/blocks/article.sass
+++ b/src/css-tricks/style/blocks/article.sass
@@ -9,6 +9,57 @@
 
   background-color: white
 
+  &._compact
+    width: 100%
+    height: auto
+    margin: 0 0 1.5em
+
+    .article__image
+      width: 100%
+      height: auto
+      margin-right: 0
+      float: none
+
+    .article__detail
+      display: block
+      position: static
+      padding: 5%
+
+    .article__header
+      @include set-font-size(2.25em)
+
+    .article__short
+      @include set-font-size(1em)
+
+    .article__autor
+      padding-top: 1em
+
+  @media (max-width: 50em)
+    width: 100%
+    height: auto
+    margin: 0 0 1.5em
+
+    .article__image
+      width: 100%
+      height: auto
+      margin-right: 0
+      float: none
+
+    .article__detail
+      display: block
+      position: static
+      padding: 5%
+
+    .article__header
+      @include set-font-size(2.25em)
+      line-height: 1em
+
+    .article__short
+      @include set-font-size(1em)
+
+    .article__autor
+      padding-top: 1em
+
   &__image
     display: block
     width: 60%
@@ -21,14 +72,6 @@
 
     z-index: 0
 
-
-  &__tag
-    @include text-set-color(#ff7a18)
-    @include set-font($triks-main-forn)
-    @include set-font-size(.85em)
-
-    text-transform: uppercase
-    font-weight: bold
 
   &__detail
     display: flex
@@ -53,6 +96,7 @@
     margin: .5em 0 1em
 
     font-weight: bold
+    line-height: 1em
 
 
   &__short
