--- a/src/css-tricks/style/blocks/cards.sass
+++ b/src/css-tricks/style/blocks/cards.sass
@@ -5,44 +5,99 @@
   align-content: stretch
 
   max-width: 93.5em
-  margin: 0 auto
-
-  height: 15em
-  border: 1px solid red
+  margin: 1em auto 0
 
   overflow: hidden
 
   &__left
     flex: 0 0 17%
 
-    border: 1px solid red
+    padding-top: 1.75em
+
+  &__title-card
+    padding-top: 11.5em
+    padding-bottom: 2em
+    padding-left: 1.75em
+
+    position: relative
+
+    &:before
+      content: ' '
+      display: block
+      position: absolute
+      left: 0
+
+      top: 0
+      width: 100%
+      height: 100%
+      border-radius: .75em
+      background-image: linear-gradient(130deg, #ff7a18, #af002d 41.07%, #319197 76.05%)
+      z-index: -1
+
+    &:after
+      content: ' '
+      display: block
+      position: absolute
+      left: .5em
+      top: .5em
+      width: calc(100% - 1em)
+      height: calc(100% - 1em)
+
+      border-radius: .75em
+      background-color: black
+
+      z-index: -1
+
+  &__title
+    @include text-set-color(white)
+    @include set-font($triks-main-forn)
+    @include set-font-size(2.05em)
+    display: block
+
+    line-height: 1.1em
+
+    font-weight: 900
+
+  &__sponsored
+    @include text-set-color(white)
+    @include set-font-size(1em)
+    @include set-font($triks-secondary-font)
+    display: block
+
+    padding-top: 2.3em
+
+    line-height: 1em
+    font-weight: 500
+
+  &__author
+    @include set-font($triks-secondary-font)
+    @include text-set-color(#0089c7)
+
+    display: block
+    padding-top: 1em
 
   &__list
     width: 100%
 
     display: flex
     flex-wrap: nowrap
+    flex: 0 1 100%
 
     padding-top: 1.75em
+    padding-bottom: 3.5em
     padding-left: 1%
 
-    overflow: scroll
-
-    border: 1px solid red
+    overflow-x: scroll
 
   &__card
-    flex: 0 0 12.5em
+    flex: 0 0 18em
 
     display: block
-    width: 12.5em
-    height: 100%
-    margin-right: -6.5%
+    margin-right: -9%
 
-    background-color: white
+    box-shadow: -2em 0 3em -2em #000
 
-    border: 1px solid red
-
-    transition: all .2s ease
+    transition: .2s
 
     &:last-child
       margin-right: 1%
@@ -51,4 +106,4 @@
       @extend :last-child
       margin-right: .75em
 
-      transform: translate(0, -10%) rotate(5deg)
+      transform: translate(0, -1em) rotate(3deg)
