--- a/src/css-tricks/style/blocks/articles.sass
+++ b/src/css-tricks/style/blocks/articles.sass
@@ -7,25 +7,49 @@
   padding-top: 3.75em
 
   &__articles
-    flex: 8 2 100%
+    flex: 7.5 2 100%
 
-    display: flex
-    flex-direction: row
-    justify-content: space-around
-    flex-wrap: wrap
+    padding-right: 3em
 
     @media (max-width: 50em)
       flex-direction: column
       justify-content: stretch
       align-items: stretch
 
+  &__articles-wrapper
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    flex-wrap: wrap
+
+
   &__article
     max-width: 30%
+
+    margin: 0 0 3em
     @media (max-width: 50em)
       max-width: 100%
 
   &__advertisement
-    flex: 2 8 100%
+    flex: 2 7.5 100%
 
     @media (max-width: 50em)
       display: none
+
+  &__button
+    @include set-font($triks-main-forn)
+    @include set-font-size(1.15em)
+    display: block
+
+    width: 100%
+
+    margin-bottom: 1em
+
+    background-color: #5e5e5e
+
+    line-height: 3em
+
+    color: white
+    text-align: center
+    text-transform: uppercase
+    font-weight: bold
