--- a/src/css-tricks/style/main.sass
+++ b/src/css-tricks/style/main.sass
@@ -33,3 +33,5 @@ body
 @import "blocks/tags"
 @import "blocks/articles"
 @import "blocks/advert"
+@import "blocks/footer"
+@import "blocks/subscribe-form"
