--- a/src/css-tricks/style/blocks/tags.sass
+++ b/src/css-tricks/style/blocks/tags.sass
@@ -2,9 +2,9 @@
   display: block
 
   &__tag
-    @include text-set-color(#ff7a18)
+    @include text-set-color($tricks-tags-color)
     @include set-font($triks-main-forn)
-    @include set-font-size(.85em)
+    @include set-font-size($tricks-tags-tag-font-size)
 
     text-transform: uppercase
     font-weight: bold
