--- a/src/mail/style/blocks/link-row.sass
+++ b/src/mail/style/blocks/link-row.sass
@@ -4,14 +4,14 @@
   flex-direction: row
 
   &._search
-    @include set-font-size(.9em)
+    @include set-font-size($mail-link-row-search-font-size)
     padding-left: .2em
     padding-top: .2em
 
     margin-bottom: 1em
 
   &._news
-    @include set-font-size(.9em)
+    @include set-font-size($mail-link-row-news-font-size)
     @include text-set-color($mail-color-text-secondary)
     padding-left: .2em
     margin-top: .9em
