--- a/src/yandex/style/common/colors.sass
+++ b/src/yandex/style/common/colors.sass
@@ -2,29 +2,65 @@ $yandex-color-page-background: #0D0D0D
 $yandex-color-page-elem-background: #1D1E22
 $yandex-color-page-elem-hover-background: #242529
 $yandex-color-footer: #15161a
-
 $yandex-color-base-text: #bfbfbf
 $yandex-color-base-text-secondary-opacity: .65
 $yandex-color-icon-opacity: .3
-
 $yandex-color-info-text: #c3c3c3a6
-
 $yandex-color-hover-main: red
 $yandex-color-hover-additional-opacity: .5
-
-
 $yandex-color-menu: #5a82b8
 $yandex-color-menu-inactive: #5a82b899
-
 $yandex-color-warning: #ee7b00
-
 $yandex-yellow: #fc0
-
 $yandex-color-social-border: black
 
 $mail-color-blue: #005FF9
-
 $mail-color-text-primary: #2C2D2E
 $mail-color-text-secondary: #87898F
-
+$mail-text-green: #0dc268
+$mail-grey: #00103d0a
 $color-break-line: #f0f1f3
+$mail-yellow: #ff9e00
+$mail-link-white-text: white
+$mail-link-text-black: black
+$main-news-category-color: black
+$mail-search-line-button-color: white
+
+$tricks-tags-color: #ff7a18
+$tricks-card-background-color: linear-gradient(85deg, #434343, #262626)
+$tricks-card-date-color: #777
+$tricks-advert-blue-line-color: #0089c7
+$tricks-advert-title-color: #434343
+$tricks-header-color: #111
+$tricks-article-detail-color: linear-gradient(270deg, #fff, #fff, #fff, transparent)
+$tricks-article-short-color: #474747
+$tricks-article-date: #565656
+$tricks-articles-button-color: #5e5e5e
+$tricks-cards-after-color: linear-gradient(130deg, #ff7a18, #af002d 41.07%, #319197 76.05%)
+$tricks-title-card-before-color: linear-gradient(130deg, #ff7a18, #af002d 41.07%, #319197 76.05%)
+$tricks-cards-author-color: #0089c7
+$tricks-cards-scrollbar-thumb-color: linear-gradient(180deg, #ccc, #262626)
+$tricks-cards-card-shadow-color: #000
+$tricks-footer-inner-color: #111
+$tricks-footer-list-header-color: #ff7a18
+$tricks-subscribe-form-color: #434343
+$tricks-subscribe-form-before-color: #909090
+$tricks-subscribe-form-title-color: #ff7a18
+$tricks-subscribe-form-button-color: #5e5e5e
+$tricks-footer-title-color: white
+$tricks-advert-color: white
+$tricks-article-color: white
+$tricks-articles-button-color: white
+$tricks-card-meta-title-color: white
+$tricks-card-title-color: white
+$tricks-card-author-name-color: white
+$tricks-cards-title-card-after-color: black
+$tricks-cards-title-color: white
+$tricks-cards-sponsored-color: white
+$tricks-footer-asterix-color: white
+$tricks-footer-list-link-color: white
+$tricks-link-header-logo-color: white
+$tricks-link-header-list-color: white
+$tricks-link-content-header-icon-color: white
+$tricks-subscribe-form-subtitle-color: white
+$tricks-subscribe-form-button-color: white
