--- a/src/css-tricks/style/blocks/header.sass
+++ b/src/css-tricks/style/blocks/header.sass
@@ -6,7 +6,7 @@
 
   border-bottom: .1em solid white
 
-  background-color: #111
+  background-color: $tricks-header-color
 
   @media (max-width: 50em)
     flex-wrap: wrap
