--- a/src/css-tricks/style/main.sass
+++ b/src/css-tricks/style/main.sass
@@ -11,7 +11,7 @@ html
 body
   @extend html
 
-  background: linear-gradient(180deg, #fff, #262626)
+  background: radial-gradient(50% 50% at top center, rgba(0, 0, 0, .66), #262626), linear-gradient(180deg, #fff, #262626)
 
   position: relative
 
