--- a/src/yandex/style/common/font.sass
+++ b/src/yandex/style/common/font.sass
@@ -2,16 +2,12 @@ $yandex-base-font-family: "Yandex Sans Text", Arial, sans-serif
 $yandex-additional-font-family: Verdana, Helvetica, sans-serif
 
 $yandex-base-font-size: 16px
-
 $yandex-normal-font-weight: normal
 $yandex-bold-font-weight: 600
 $yandex-light-font-weight: 300
-
 $yandex-top-bar-font-size: .88em
 $yandex-top-bar-line-height: 2.75em
-
 $yandex-normal-line-height: 1.5em
-
 $yandex-icon-bar-font-size: 1.6em
 $yandex-category-list-font-size: 1.2em
 $yandex-category-list-item-font-size: 1em
@@ -39,8 +35,51 @@ $yandex-category-smaller-font-size: .8em
 
 $mail-base-font-family: Helvetica, Arial, sasn-serif
 
+$mail-link-font-size-header: .8em
+$mail-link-row-search-font-size: .9em
+$mail-link-row-news-font-size: .9em
+$mail-search-line-font-size: 1em
+$mail-search-line-example-font-size: .78em
+$mail-search-line-button-font-size: 1em
+$mail-news-item-font-size: .9em
+$mail-widget-weather-header-font-size: .9em
+$mail-widget-news-font-size: .9em
+$mail-widget-left-font-size: 1.5em
+$mail-widget-left-news-font-size: 3em
+$mail-wheather-item-top-font-size: .8em
+$mail-wheather-item-top-green-font-size: .75em
+$mail-wheather-item-icon-font-size: 1.5em
+$mail-wheather-item-icon-money-font-size: 1em
+
 $triks-main-forn: Blanco, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol
 $triks-secondary-font: Blanco, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol
+
+$tricks-tags-tag-font-size: .85em
+$tricks-subscribe-form-title-font-size: 1.5em
+$tricks-subscribe-form-input-font-size: 1em
+$tricks-subscribe-form-button-font-size: 1.15em
+$tricks-advert-blue-line-font-size: .5em
+$tricks-advert-title-font-size: .75em
+$tricks-article-small-header-font-size: 2.25em
+$tricks-article-small-short-font-size: 1em
+$tricks-article-header-font-size: 3em
+$tricks-article-short-font-size: 1.2em
+$tricks-articles-button-font-size: 1.15em
+$tricks-card-meta-title-font-size: 1em
+$tricks-card-title-font-size: 1.4em
+$tricks-card-tags-font-size: .75em
+$tricks-card-author-name-font-size: 2.5em
+$tricks-cards-title-font-size: 2.05em
+$tricks-cards-sponsored-font-size: 1em
+$tricks-footer-asterix-font-size: 7.5em
+$tricks-footer-title-font-size: 1.75em
+$tricks-footer-list-header-font-size: 1.25em
+$tricks-footer-list-link-font-size: 1.25em
+$tricks-footer-list-link-font-size: 1.25em
+$tricks-link-header-logo-font-size: 1.75em
+$tricks-link-header-list-font-size: .9em
+$tricks-link-header-list-break-1-font-size: .75em
+$tricks-link-content-header-icon-footer-size: 2em
 
 @mixin font-import-family($name, $path, $display: 'swap')
 
